--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
     },
     "authors": [
         {
-            "name": "Aurélien",
-            "email": "aurelien.barbier@wildcodeschool.com"
+            "name": "Mathys",
+            "email": "wilder@wildcodeschool.com"
         }
     ]
 }
